--- a/src/components/CardForecast/Slide/Slide.module.css
+++ b/src/components/CardForecast/Slide/Slide.module.css
@@ -146,10 +146,105 @@ p {
     right: 30px;
     font-size: 12px;
   }
+  .tempMain {
+    font-size: 70px;
+    position: absolute;
+    top: 20%;
+    left: 25%;
+    font-weight: 300;
+    margin: 5px;
+  }
+  .time {
+    position: absolute;
+    top: 55px;
+    font-weight: 400;
+    font-size: 20px;
+    margin: 5px;
+  }
+  .temp {
+    display: flex;
+    font-size: 25px;
+    position: absolute;
+    top: 37%;
+    left: 17%;
+    font-weight: 300;
+    margin: 5px;
+  }
+
+  .tempAvg {
+    font-size: 75px;
+    font-weight: 300;
+    height: 95px;
+  }
+  .descT {
+    font-size: 15px;
+  }
+
+  .maxMin {
+    text-align: end;
+    position: absolute;
+    top: 22%;
+    left: 23%;
+  }
+  .tempFeel {
+    font-size: 20px;
+    position: absolute;
+    top: 42%;
+    left: 29%;
+    font-weight: 300;
+    margin: 5px;
+  }
 }
 
 @media (max-width: 415px) {
   .currentCard {
     width: 320px;
+  }
+  .tempMain {
+    font-size: 70px;
+    position: absolute;
+    top: 20%;
+    left: 25%;
+    font-weight: 300;
+    margin: 5px;
+  }
+  .time {
+    position: absolute;
+    top: 55px;
+    font-weight: 400;
+    font-size: 20px;
+    margin: 5px;
+  }
+  .temp {
+    display: flex;
+    font-size: 25px;
+    position: absolute;
+    top: 37%;
+    left: 17%;
+    font-weight: 300;
+    margin: 5px;
+  }
+  .tempAvg {
+    font-size: 75px;
+    font-weight: 300;
+    height: 95px;
+  }
+  .descT {
+    font-size: 15px;
+  }
+
+  .maxMin {
+    text-align: end;
+    position: absolute;
+    top: 22%;
+    left: 20%;
+  }
+  .tempFeel {
+    font-size: 20px;
+    position: absolute;
+    top: 42%;
+    left: 29%;
+    font-weight: 300;
+    margin: 5px;
   }
 }
