--- a/src/pages/Main.module.css
+++ b/src/pages/Main.module.css
@@ -1,7 +1,8 @@
 .siteLayoutContent {
-  /* height: 10vh; */
-  width: 100vw;
   background-color: #f4f5f7;
+}
+.header {
+  border-bottom: 1px solid #d9d9d9;
 }
 
 .currentCard {
